# galago-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PYPI.md  README.md  RELEASE.md  absolute_coordinates.txt  czi_compress.py  czi_decompress.py  environment.yml  galago-tools-electron-app-plan.md  galago_tools-0.9-py3-none-any.whl  pyham.py  pyproject.toml  requirements-dev.txt  requirements-electron.txt  requirements.txt  setup.py  test_simulation.py  tools-config.json
.github/workflows/: auto-release.yml  main.yml  publish.yml
interfaces/: controller.proto  protocol.proto
outputs/: bravo_protocol_1763530963.pro  bravo_protocol_1764017302.pro  bravo_protocol_1764017475.pro
scripts/: build_single_tool.py  build_tools.ps1  build_tools.sh  bump_version.py
tools/: ShareMyCar.spec  __init__.py  app_config.py  base_server.py  cli.py  command_args.py  conda_utils.py  desktop_webview.py  discover_tools.py  emojis.py  index.html  launch_console.py  launch_tools.py  plr_test.py  pyqt_app.py  test.py  utils.py  version.py  web_interface.html  web_server.py  web_server.spec
tools/alps3000/: alps3000.spec  driver.py  entry_point.py  server.py
tools/benchcel/: driver.py  server.py
tools/bioShake/: driver.py  server.py
tools/bioshake/: bioshake.spec  driver.py  entry_point.py  server.py
tools/bravo/: bravo.py  bravo.spec  bravo_methods.txt  bravo_molbio.dev  driver.py  driver_activex.py  driver_v2.py  entry_point.py  multiple_devices.dev  registry.py  server.py  wrapper.py
tools/clariostar/: CLARIOstar.py  driver.py  server.py
tools/comms/: tcpip.py
tools/cytation/: cytation.spec  driver.py  entry_point.py  server.py
tools/dataman70/: dataman70.spec  driver.py  entry_point.py  requirements.txt  server.py
tools/galago-tools/: cli.py  (+5 more)
(+146 files in other folders)
