[build-system]
requires = ["setuptools", "wheel", "pydantic","grpcio-tools==1.51.1","cython"]
build-backend = "setuptools.build_meta"

# Keep linting and type checking config only, remove setuptools configuration
# All package configuration is in setup.py

[tool.ruff]
target-version = "py39"
line-length = 100
ignore = ["E501"]
exclude = ["cytation.py"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = "True"
disallow_any_unimported = "False"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "False"
show_error_codes = "True"
follow_imports = "silent"
disable_error_code = ["misc", "var-annotated"]
exclude = ['.*pb2.*', 'pyi$', 'cytation.py', "teach_pendant","opentrons"]

[[tool.mypy.overrides]]
module = ""
ignore_missing_imports = true